test/syntaxerrors/TestJavaMissingParens.jdc
package exceptions;

public class JavaMissingParens {
    public static void main(String[] args) {
        System.out.println "Hello world!";
    }
}